--- a/package.json
+++ b/package.json
@@ -16,13 +16,25 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
+    "module-alias": "^2.2.3",
+    "mylogger": "^1.1.5",
     "next": "13.3.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-auto-typing": "^1.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.1.2",
+    "react-type-animation": "^3.1.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "daisyui": "^3.7.7"
   }
 }
